--- a/templates/about.html
+++ b/templates/about.html
@@ -138,9 +138,7 @@
           <p>
             Copyright &copy;
             <script type="text/javascript">document.write(new Date().getFullYear());</script>
-            AUSTIN SCOBEE | Website created with <a href="http://www.mashup-template.com/"
-              title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/"
-              title="Beautiful Free Images">Unsplash</a>
+            AUSTIN SCOBEE
           </p>
         </div>
       </div>
