--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,8 +17,6 @@
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
   <meta content="Mashup templates have been developped by Orson.io team" name="author">
-
-  <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
@@ -146,9 +144,7 @@
           <p>
             Copyright &copy;
             <script type="text/javascript">document.write(new Date().getFullYear());</script>
-            AUSTIN SCOBEE | Website created with <a href="http://www.mashup-template.com/"
-              title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/"
-              title="Beautiful Free Images">Unsplash</a>
+            AUSTIN SCOBEE
           </p>
         </div>
       </div>
