--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,6 @@
     <meta content="description" name="description">
     <meta name="google" content="notranslate" />
     <meta content="Mashup templates have been developped by Orson.io team" name="author">
-
-    <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
 
     <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
@@ -35,7 +33,6 @@
     <div id="site-border-right"></div>
     <div id="site-border-top"></div>
     <div id="site-border-bottom"></div>
-    <!-- Add your content of header -->
     <header>
         <nav class="navbar  navbar-fixed-top navbar-inverse">
             <div class="container">
@@ -61,7 +58,6 @@
             </div>
         </nav>
     </header>
-    <!-- Add your site or app content here -->
     <div class="hero-full-container background-image-container white-text-container"
         style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./static/assets/images/space.jpg')">
         <div class="container">
@@ -72,7 +68,7 @@
                             <h1>Hello,<br>
                                 <span id="typed-strings">
                                     <span>I'm Austin Scobee</span>
-                                    <span>Self-Taught Software Engineer</span>
+                                    <span>Software Engineer</span>
                                 </span>
                                 <span id="typed"></span>
                             </h1>
