--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -17,8 +17,6 @@
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
   <meta content="Mashup templates have been developped by Orson.io team" name="author">
-
-  <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
@@ -34,7 +32,7 @@
   <div id="site-border-right"></div>
   <div id="site-border-top"></div>
   <div id="site-border-bottom"></div>
-  <!-- Add your content of header -->
+
   <header>
     <nav class="navbar navbar-fixed-top navbar-default">
       <div class="container">
@@ -154,9 +152,7 @@
           <p>
             Copyright &copy;
             <script type="text/javascript">document.write(new Date().getFullYear());</script>
-            AUSTIN SCOBEE | Website created with <a href="http://www.mashup-template.com/"
-              title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/"
-              title="Beautiful Free Images">Unsplash</a>
+            AUSTIN SCOBEE
           </p>
         </div>
       </div>
